--- a/wm.css
+++ b/wm.css
@@ -175,5 +175,27 @@
       max-width: 100%;
       height: auto;
     }
+
+    .topo {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+      }
+    
+      .menu {
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 12px;
+      }
+    
+      .menu li a {
+        font-size: 0.95em;
+        padding: 5px;
+      }
+    
+      .topo h1 {
+        font-size: 1.5em;
+        text-align: center;
+      }
   }
   
